--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "file-saver": "^2.0.5",
+    "firebase": "^10.13.1",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.399.0",
     "qrcode.react": "^3.1.0",
