--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cmdk": "^1.0.0",
     "file-saver": "^2.0.5",
     "firebase": "^10.13.1",
+    "framer-motion": "^11.5.4",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.399.0",
     "qrcode.react": "^3.1.0",
@@ -36,7 +37,7 @@
     "react-router-dom": "^6.24.0",
     "react-speech-recognition": "^3.10.0",
     "regenerator-runtime": "^0.14.1",
-    "tailwind-merge": "^2.3.0",
+    "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "xlsx": "^0.18.5"
   },
@@ -53,7 +54,7 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
     "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.4",
+    "tailwindcss": "^3.4.11",
     "typescript": "^5.2.2",
     "vite": "^5.3.1"
   }
